--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.13.3",
+    "crypto-js": "^3.1.8",
     "express": "^4.13.3",
+    "jsonwebtoken": "^7.1.9",
     "pg": "^6.1.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.5.1",
